[tool.poetry]
name = "python-mock-example"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johan.vergeer@ordina.nl>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
